Revert "Button Section"
This reverts commit 3c0b8b57868fd820bacb9fa9659fca8e566b12ca.

--- a/css/main.css
+++ b/css/main.css
@@ -162,11 +162,10 @@ a{
   }
   #buttons .item-wrapper{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
   }
     #buttons .item-wrapper .button-pack{
       display: flex;
-      flex-wrap: wrap;
     }
       #buttons .item-wrapper .button-pack .left-button{
         padding-right: 3rem;
