Portfolio Template (Project Page)

--- a/css/main.css
+++ b/css/main.css
@@ -1,277 +1,26 @@
-@font-face {
-  font-family: 'MonsterratRegular';
-  src: url('fonts/Montserrat/Montserrat-Regular.ttf')
+.project-grid{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+  margin: 0rem 10rem 0rem 10rem;
 }
-@font-face {
-  font-family: 'AvenirNextBold';
-  src: url('fonts/avenir-next/AvenirNextLTPro-Bold.otf')
-}
-
-@font-face {
-  font-family: 'AvenirNextRegular';
-  src: url('fonts/avenir-next/AvenirNextLTPro-Regular.otf')
-}
-
-body{
-  font-family: MonsterratRegular;
-}
-
-h1{
-  font-family: AvenirNextBold;
-  font-size: 5rem;
-  color: #032245;
-}
-
-h2{
-  font-family: AvenirNextRegular;
-  font-size: 3rem;
-  color: #56667a;
-}
-
-h3{
-  font-family: AvenirNextRegular;
-  font-size: 1.5rem;
-  color: #032245;
-}
-
-p{
-  font-family: MonsterratRegular;
-  color: #343e4a;
-  font-size: 1.25rem;
-}
-
-strong{
-  color: #343e4a;
-}
-
-a{
-  text-decoration: none;
-}
-
-.category-row{
-  box-sizing: border-box;
-  /* background-color: #576996; */
-  padding: 10rem;
-  /* border: 3px solid #e0e0e0; */
-}
-
-#banner{
-
-}
-  #banner nav{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+  .project-grid .grid-item{
+    /* padding: 15rem 23rem 15rem 23rem; */
+    background-color: grey;
+    /* border: 1px solid black; */
+    margin: 0.25rem;
   }
-    #banner nav a{
-      color: #ababab;
-      padding-right: 5rem;
-    }
-    #banner nav a:hover{
-      color: #56667a;
-    }
-
-#colors{
-}
-  #colors .color-block{
-    padding: 5rem;
-  }
-  #colors .item-wrapper{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding-top: 5rem;
-  }
-    #colors .item-wrapper #first-color{
-      background-color: #032245;
-    }
-      #colors .item-wrapper #first-color p{
-        color: #ababab;
-      }
-    #colors .item-wrapper #second-color{
-      background-color: #56667a;
-    }
-      #colors .item-wrapper #second-color p{
-        color: #ababab;
-      }
-    #colors .item-wrapper #third-color{
-      background-color: #343e4a;
-    }
-      #colors .item-wrapper #third-color p{
-        color: #ababab;
-      }
-    #colors .item-wrapper #fourth-color{
-      background-color: #ababab;
-    }
-      #colors .item-wrapper #fourth-color p{
-        /* color: #ababab; */
-      }
-
-#typography{
-}
-  #typography .item-wrapper{
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-  #typography .item-wrapper .heading-wrapper{
-
-  }
-    #typography .item-wrapper .heading-wrapper:nth-child(1) p:nth-child(7){
-      font-family: AvenirNextBold;
-    }
-    #typography .item-wrapper .heading-wrapper:nth-child(2) p:nth-child(7){
-      font-family: AvenirNextRegular;
-    }
-    #typography .item-wrapper .heading-wrapper:nth-child(3) p:nth-child(7){
-      font-family: AvenirNextRegular;
-    }
-     #color-pack-one p{
-      background-color: #032245;
-      color: #ababab;
-      padding: 1rem;
-      width: 6rem;
+    .project-grid .grid-item .project-text{
       text-align: center;
     }
-    #typography .item-wrapper .heading-wrapper #color-pack-two p{
-      background-color: #56667a;
-      color: #ababab;
-      padding: 1rem;
-      width: 6rem;
-      text-align: center;
-    }
-    #typography .item-wrapper .heading-wrapper #color-pack-three p{
-      background-color: #032245;
-      color: #ababab;
-      padding: 1rem;
-      width: 6rem;
-      text-align: center;
-    }
-    #typography .item-wrapper .heading-wrapper #color-pack-four p{
-      background-color: #343e4a;
-      color: #ababab;
-      padding: 1rem;
-      width: 6rem;
-      text-align: center;
-    }
-
-    #typography .item-wrapper .heading-wrapper #top-heading{
-      padding-bottom: 3rem;
-    }
-      #typography .item-wrapper .heading-wrapper #top-heading h2{
-        color: #032245;
+      .project-grid .grid-item .project-text p{
+        color: blue;
       }
-      #typography .item-wrapper .heading-wrapper #top-heading h3{
-        color: #032245;
+    .project-grid .grid-item img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+      .project-grid .grid-item img:hover{
+        opacity: 0.5;
       }
-#buttons{
-
-}
-  #buttons h2{
-    padding-bottom: 10rem;
-  }
-  #buttons .item-wrapper{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-    #buttons .item-wrapper .button-pack{
-      display: flex;
-      flex-wrap: wrap;
-    }
-      #buttons .item-wrapper .button-pack .left-button{
-        padding-right: 3rem;
-      }
-/* buttons */
-.button-confirm{
-  border: 2px solid #032245;
-  padding: 0.75em;
-  padding-left: 5em;
-  padding-right: 5em;
-  text-align: center;
-  font-weight: bold;
-  color: #032245;
-  box-sizing: border-box;
-}
-  .button-confirm:hover{
-    background-color: #343e4a;
-    color: white;
-  }
-.button-cancel{
-  border: 2px solid #ababab;
-  padding: 0.75em;
-  padding-left: 5.3em;
-  padding-right: 5.3em;
-  text-align: center;
-  font-weight: bold;
-  color: #ababab;
-  box-sizing: border-box;
-}
-  .button-cancel:hover{
-    background-color: #ababab;
-    color: white;
-  }
-
-/* flexibility */
-@media only screen and (max-width: 1000px) {
-  body, html {
-    overflow-x:hidden;
-  }
-  h1{
-    font-size: 3.5rem;
-    margin: ;
-  }
-  #banner{
-    padding-bottom: 0;
-  }
-  #banner nav {
-    flex-direction: column;
-    align-content: flex-end;
-    padding-bottom: 5rem;
-  }
-  #banner nav a{
-    padding-bottom: 2rem;
-    text-align: right;
-    padding-right: 1rem;
-    padding-top: 0rem;
-  }
-  .category-row{
-    padding: 0rem;
-    padding-left: 1rem;
-    padding-bottom: 11rem;
-    padding-top: 0rem;
-  }
-  #colors .item-wrapper{
-    justify-content: flex-start;
-    padding-top: 0rem;
-  }
-    #colors h2{
-      padding-bottom: 0rem;
-    }
-    #colors .item-wrapper .color-block{
-      margin-bottom: 1rem;
-    }
-  #typography h2{
-    padding-bottom: 0rem;
-  }
-  #typography .item-wrapper{
-    justify-content: flex-start;
-    padding-left: 1rem;
-  }
-    #typography .item-wrapper .heading-wrapper{
-      padding-top: 2rem;
-    }
-      #typography .item-wrapper .heading-wrapper #top-heading{
-        padding-bottom: 0rem;
-      }
-  #buttons{
-    padding-bottom: 4rem;
-  }
-  #buttons h2{
-    padding-bottom: 2rem;
-  }
-    #buttons .item-wrapper .left-button{
-      margin-bottom: 4rem;
-    }
-}
