--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -66,6 +66,7 @@ a{
     #banner nav a{
       color: #ababab;
       padding-right: 5rem;
+      font-size: 1.25rem;
     }
     #banner nav a:hover{
       color: #56667a;
