--- a/css/main.css
+++ b/css/main.css
@@ -2,18 +2,29 @@
 #about{
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
-  margin-top: 7rem;
+  align-items: flex-start;
+  /* margin-top: 7rem; */
 }
+  .category-row-about{
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
   #about .biography{
     max-width: 45%;
   }
+    #about .biography h4:nth-child(3){
+      margin-bottom: 6rem;
+    }
   #about .design-titles{
     text-align: right;
     color: #56667a;
   }
+    #about .biography-image img{
+      width: 75%;
+    }
 /* End of about page */
 
+/* Project Page */
 .project-grid{
   display: grid;
   grid-template-columns: auto auto auto;
@@ -40,3 +51,4 @@
       .project-grid .grid-item img:hover{
         opacity: 0.5;
       }
+/* Project Page ends here */
