--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,44 @@
+/* Header */
+.name-title h1{
+  border: 0.25rem solid #70788a;
+  padding: 3rem;
+  text-align: center;
+}
 /* About Page */
-#about{
+.page-label{
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  /* flex-wrap: wrap; */
-  /* flex-direction: column; */
-  /* margin-top: 7rem; */
 }
-  .category-row-about{
-    padding-left: 10rem;
-    padding-right: 10rem;
+  .page-label h3{
+    margin-right: 1rem;
   }
-  #about .biography{
-    max-width: 25%;
-    /* flex-basis: 100%; */
+.bio-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.my-name{
+  margin-top: 3rem;
+  text-align: center;
+}
+#about .biography{
+  max-width: 25%;
+}
+.programs{
+  margin-top: 10rem;
+  text-align: center;
+}
+.program-labels{
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-right: 30rem;
+  margin-left: 30rem;
+}
+  .program-labels p{
+
   }
-  /* #about .biography-image{
-   padding-right: 3rem;
-  } */
 /* End of about page */
 
 /* Project Page */
@@ -30,16 +51,40 @@
 }
   .project-grid .grid-item{
     /* padding: 15rem 23rem 15rem 23rem; */
-    background-color: grey;
+    /* background-color: grey; */
     /* border: 1px solid black; */
     margin: 0rem;
   }
+    .project-grid .grid-item .project-image{
+      /* position: relative; */
+      width: 66.5rem;
+    }
     .project-grid .grid-item img{
       width: 100%;
-      height: 100%;
+      height: auto;
       object-fit: cover;
+      position: relative;
     }
       .project-grid .grid-item img:hover{
         opacity: 0.5;
       }
+/* overlay */
+.overlay-one{
+  position: absolute;
+  top: 60rem;
+  left: 13rem;
+  opacity: 1;
+}
+  .overlay-one:hover{
+    opacity: 1;
+  }
+.overlay-two{
+  position: absolute;
+  top: 60rem;
+  left: 85rem;
+  opacity: 1;
+}
+  .overlay-two:hover{
+
+  }
 /* Project Page ends here */
